# png-phi-scan

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
fixtures/: create_test_fixtures.py
png_phi_scan/: cli.py  models.py  ocr_reader.py  pixel_scanner.py  scanner.py
tests/: test_cli.py  test_models.py  test_scanner.py
